[gd_scene load_steps=2 format=3 uid="uid://67yxn7oqday8"]

[ext_resource type="Script" uid="uid://cy1pbljsqcbbu" path="res://objects/components/eat_component.gd" id="1_p6oml"]

[node name="EatComponent" type="Area2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_p6oml")

[node name="EatTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="EatTimer" to="." method="_on_eat_timer_timeout"]
